Realm database used for config and sounds. Recycler view bound to realm database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">BoiteABaptiste</string>
+    <string name="loading">Chargement des sons …</string>
 </resources>
