--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">BoiteABaptiste</string>
     <string name="loading">Chargement des sons …</string>
+    <string name="total_clicks">Clics totaux</string>
+    <string name="my_clicks">Mes clics</string>
 </resources>
