--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="loading">Chargement des sons …</string>
     <string name="total_clicks">Clics totaux</string>
     <string name="my_clicks">Mes clics</string>
+    <string name="sort">trier</string>
 </resources>
