sounds are sortable by alpha, total clicks and my clicks

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="total_clicks">Clics totaux</string>
     <string name="my_clicks">Mes clics</string>
     <string name="sort">trier</string>
+    <string name="sort_by">Trier par</string>
 </resources>
