adincube ads added in recycler views

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="my_clicks">Mes clics</string>
     <string name="sort">trier</string>
     <string name="sort_by">Trier par</string>
+    <string name="adincube_app_key">cef066673ce140cbad53</string>
 </resources>
