--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="sort">trier</string>
     <string name="sort_by">Trier par</string>
     <string name="adincube_app_key">cef066673ce140cbad53</string>
+    <string name="empty_favorites_description">Vous n\'avez pas encore choisi de sons favoris. Cliquez sur les étoiles dans la liste des sons pour les enregistrer ici.</string>
 </resources>
