--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="empty_favorites_description">Vous n\'avez pas encore choisi de sons favoris. Cliquez sur les étoiles dans la liste des sons pour les enregistrer ici.</string>
     <string name="footer_title">Suggérez-nous de nouvelles boîtes !</string>
     <string name="footer_subtitle">Nous ferons notre possible pour les créer</string>
+    <string name="mailto">mailto:boitea@monirapps.com</string>
+    <string name="mail_subject">Suggestion de boîte</string>
 </resources>
